--- a/wordpress/readme.html
+++ b/wordpress/readme.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width" />
@@ -95,3 +95,4 @@
 
 </body>
 </html>
+<!-- another edit -->
